--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	color: #333;
 }
+h4 {
+	font-family: Arial, Helvetica, sans-serif;
+	color: #a7adb3;
+	padding-bottom: 20px;
+	margin-bottom: 20px;	
+  }
 
 #main {
 	width: 680px;
@@ -16,8 +22,8 @@ body {
 }
 
 #main h3 {
-	border-bottom: 1px solid #999;
-	color: #333;
+	border-bottom: 3px solid rgb(85, 82, 82);
+	color: #4a4c4e;
 	padding-bottom: 20px;
 	margin-bottom: 20px;	
 }
@@ -35,7 +41,7 @@ body {
     color: #444;
     border-collapse: collapse;
     width: 100%;
-    border: 1px solid #ffffff;
+	border-bottom: 1px solid #999;
 }
 
 .table1 tr th{
@@ -69,25 +75,38 @@ body {
 	cursor: pointer;
   }
   .button2 {
-	background-color: #4caf78;
-	border: none;
-	color: white;
+	display: inline-block;
 	padding: 5px 15px;
+	font-size: 16px;
+	margin: 10px 2px;
+	cursor: pointer;
 	text-align: center;
 	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
-	cursor: pointer;
+	outline: none;
+	color: #fff;
+	background-color: #4CAF50;
+	border: none;
+	border-radius: 15px;
+	box-shadow: 0 3px #999;
+  }
+  
+  .button2:hover {background-color: #3e8e41}
+  
+  .button2:active {
+	background-color: #3e8e41;
+	box-shadow: 0 5px #666;
+	transform: translateY(4px);
   }
   input {
-	width: 100%;
+  width: 50%;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
+  background-color: #d1dde4;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  text-align: center;
   }
-  .button {border-radius: 12px;}
+  .button {border-radius: 4px;}
   .button2 {border-radius: 12px;}
